<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".fragment.UserProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--    <androidx.appcompat.widget.Toolbar-->
        <!--        android:id="@+id/customToolbar"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="?attr/actionBarSize"-->
        <!--        android:background="?attr/colorPrimary"-->
        <!--        app:layout_constraintTop_toTopOf="parent"-->
        <!--        tools:ignore="MissingConstraints">-->

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="conto"/>-->

        <!--        &lt;!&ndash; Customize your toolbar layout here &ndash;&gt;-->
        <!--        &lt;!&ndash; For example, you can add a TextView, an ImageView, etc. &ndash;&gt;-->

        <!--    </androidx.appcompat.widget.Toolbar>-->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <!--                        <de.hdodenhof.circleimageview.CircleImageView-->
                        <!--                            android:id="@+id/avatarImageView"-->
                        <!--                            android:layout_width="100dp"-->
                        <!--                            android:layout_height="100dp"-->
                        <!--                            android:layout_gravity="center"-->
                        <!--                            android:layout_marginBottom="5dp"-->
                        <!--                            android:scaleType="centerCrop"-->
                        <!--                            android:src="@mipmap/avatar_image" />-->

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="75dp"
                                android:layout_weight="1"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="5dp"
                                app:cardUseCompatPadding="true">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="0.5dp"
                                        android:text="@string/saldo"
                                        android:textColor="@color/black"
                                        android:textSize="15sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/saldoText"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="5dp"
                                        android:text="@string/rp_0"
                                        android:textSize="15sp" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="75dp"
                                android:layout_weight="1"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="5dp"
                                app:cardUseCompatPadding="true">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="0.5dp"
                                        android:text="@string/transaksi"
                                        android:textColor="@color/black"
                                        android:textSize="15sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/transaksiText"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="5dp"
                                        android:text="@string/_0"
                                        android:textSize="15sp" />
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>
                        </LinearLayout>

                        <Button
                            android:id="@+id/editProfileBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/edit_profile" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.5dp"
                        android:text="@string/nama"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/john_smith"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.5dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/emailText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/email_email_com"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.5dp"
                        android:text="@string/telepon"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phoneText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/xxx_xxxx_xxxx"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.5dp"
                        android:text="@string/alamat"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/alamatText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="-"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginVertical="15dp"
                android:background="#808080" />

            <TextView
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/keluar"
                android:textColor="#FF0000"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>