<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/hijau1"
    app:cardCornerRadius="5dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/namaUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/al_hadid_defry"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_26_desember_2022"
                android:textAlignment="textEnd"
                android:textColor="@color/hijau3"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="5dp"
            android:layout_marginBottom="10dp"
            android:background="?actionBarDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/namaSampah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sampah_plastik"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/harga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/rp_5_000_kg"
                    android:textColor="@color/hijau3"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/berat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/berat_4_kg"
                    android:textColor="@color/hijau3"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalHarga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_50_000_000"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <!--            <ImageButton-->
        <!--                android:id="@+id/delete"-->
        <!--                android:layout_width="25dp"-->
        <!--                android:layout_height="25dp"-->
        <!--                android:layout_alignParentRight="true"-->
        <!--                android:backgroundTint="@color/red"-->
        <!--                android:background="@drawable/ic_baseline_delete_24"/>-->
        <!--        </RelativeLayout>-->

    </LinearLayout>

</androidx.cardview.widget.CardView>